# vanguard

./: .gitignore  .gitmodules  README.md
myrtle/: README.md  add_digits.py  binary_tree_paths.py  coin_change.py  decode_string.py  delete_operation_for_two_strings.py  design_hashset.py  divisor_game.py  excel_sheet_column.py  find_bottom_left_tree_value.py  find_k_pairs_with_smallest_sums.py  find_largest_value_in_each_tree_row.py  flatten_nested_list_iterator.py  hamming_weight.py  hindex.py  implement_queue_using_stack.py  implement_stack_using_queue.py  is_subsequence.py  kth_largest_element_in_an_array.py  largest_sum_of_averages.py  linked_list.py  longest_common_subsequence.py  longest_harmonious_subsequence.py  longest_valid_parentheses.py  lru_cache.py  maximum_avg_subarrary_i.py  maximum_depth_of_n_ary_tree.py  maximum_length_of_repeated_subarray.py  maximum_subarray_with_one_delection.py  maximum_with_ramp.py  median_of_two_sorted_arrays.py  minimum_path_sum.py  my_b_tree.py  my_heap.py  n_ary_tree_level_order_traversal.py  next_greater_number_ii.py  palindrome_linked_list.py  plan.org  plus_one.py  problem_2.py  (+18 more)
plume/: CMakeLists.txt  README.md
plume/altio/: epoll_input.c
plume/atomic_append/: append.c
plume/fork/: fork_stdio.c  make_zombie.c  t_clone.c
plume/inotify/: #demo_inotify.c#  .#demo_inotify.c  demo_inotify.c  monitor_dir.c
plume/pgsjc/: catch_sighub.c
plume/realpath/: view_link.c
plume/signal/: nonreentrant.c
plume/svmsg/: svg.h  svg_server.c
plume/threads/: thread_multijoin.c
vanilla/: demo.py  requirements.txt
yato/: main.py  (+10 more)
(+176 files in other folders)
